--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,17 @@
 spring.application.name=portfolio
 
+server.port=5000
 
-#database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/PortFolioNew
-spring.datasource.username=root
-spring.datasource.password=majid17oct
+# Database Configuration
+spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:localhost}:${RDS_PORT:3306}/${RDS_DB_NAME:PortFolioNew}
+spring.datasource.username=${RDS_USERNAME:root}
+spring.datasource.password=${RDS_PASSWORD:majid17oct}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Multipart File Upload Configuration
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-spring.jpa.show-sql=true
